[tool.poetry]
name = "pyunitconverter"
version = "0.5.1"
description = "Library of Python functions to converts units"
authors = ["Steve De Jongh <dejongh.st@gmail.com>"]
repository = "https://github.com/sdejongh/pyunitconverter"
readme = "README.md"
license = "MIT"
keywords = ["units", "conversion", "helper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/sdejongh/pyunitconverter/issues"

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
